overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,20 @@
-*{
+/* *{
   margin: 0;
   padding: 0px;
 }
 body{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: #111;
+} */
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; 
+  width: 100%;
+  box-sizing: border-box;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: #111;
+}
+* {
+  box-sizing: inherit;
 }
